# crossterm-style

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: color.rs  enums.rs  lib.rs  objectstyle.rs  style.rs  styledobject.rs  traits.rs
src/color/: ansi.rs  winapi.rs
src/enums/: attribute.rs  color.rs  color_type.rs  colored.rs
src/style/: ansi.rs  winapi.rs
