[package]
name = "crossterm_style"
version = "0.5.1"
authors = ["T. Post"]
description = "A cross-platform library styling the terminal output."
repository = "https://github.com/crossterm-rs/crossterm-style"
documentation = "https://docs.rs/crossterm_style/"
license = "MIT"
keywords = ["style", "color", "attributes", "crossterm", "terminal"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "deprecated" }

[target.'cfg(windows)'.dependencies]
winapi = { version =  "0.3.8", features = ["wincon"] }
crossterm_winapi = { version = "0.2.1" }
lazy_static = "1.4"

[dependencies]
crossterm_utils = { version = "0.3.1" }
serde = { version = "1.0.0", features = ["derive"], optional = true }
